--- a/package.json
+++ b/package.json
@@ -1,45 +1,28 @@
 {
-    "name": "literature",
-    "version": "0.1.0",
-    "private": true,
-    "proxy": "http://localhost:3001",
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "express": "^4.19.2",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-scripts": "5.0.1",
-        "socket.io": "^4.7.5",
-        "web-vitals": "^2.1.4"
-    },
+    "name": "battleships",
+    "version": "1.0.0",
+    "description": "Multiplayer Battleship Game",
+    "main": "server.js",
     "scripts": {
-        "start": "node server/index.js",
-        "dev": "nodemon server",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "start": "node server",
+        "dev": "nodemon server"
     },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kubowania/battleships.git"
     },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/kubowania/battleships/issues"
+    },
+    "homepage": "https://github.com/kubowania/battleships#readme",
+    "dependencies": {
+        "express": "^4.17.1",
+        "socket.io": "^2.3.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.3"
+        "nodemon": "^2.0.22"
     }
 }
